kiali-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: kiali
  name: kiali
  namespace: istio-system
spec:
  rules:
  - host: a40e469bc910911e992f2023646f1c56-1142892619.us-east-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: kiali
          servicePort: 20001
        path: /kiali
